DONE WITH CAROUSAL AND ACCORDION

--- a/index.html
+++ b/index.html
@@ -84,35 +84,35 @@
   <div class="faqBox">
     <h1 style="color: rgb(4, 43, 4);">FAQ'S</h1>
   </div>
-  <div class="accordion accordion-flush" id="accordionFlushExample" style="margin-top: 50px;">
+  <div class="accordion accordion-flush" id="accordionFlushExample" style="width: 900px; margin-top: 30px; margin-left: 200px; margin-bottom: 30px;">
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-          Accordion Item #1
+          How often should I water my plants?
         </button>
       </h2>
       <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+        <div class="accordion-body">This is a common question for plant owners, as overwatering or underwatering can be detrimental to plant health. The website could provide general guidelines and specific watering recommendations for different types of plants.</div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-          Accordion Item #2
+          What are some common signs of plant pests and diseases, and how can I treat them?
         </button>
       </h2>
       <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+        <div class="accordion-body">Many plant owners encounter issues with pests or diseases that can affect their plants' health. The website could offer information on identifying common pests and diseases, along with tips and organic remedies for treatment.</div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-          Accordion Item #3
+          What are the best indoor plants for low-light conditions?
         </button>
       </h2>
       <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+        <div class="accordion-body">This question is relevant for people who want to add greenery to their indoor spaces but have limited access to natural sunlight. The website could suggest a variety of low-light-tolerant plants suitable for different rooms and light levels</div>
       </div>
     </div>
   </div>
