--- a/wishlist.html
+++ b/wishlist.html
@@ -38,8 +38,49 @@
       </div>
     </nav>
 
+    <!-- ------------------------------------------------------------------------------------------------ -->
+    <!-- Wishlist title -->
+      <div>
+        <h1 class="wishlist-title">Wishlist</h1>
+      </div>
 
-    
+    <!-- Wishlist table -->
+    <table class="table" style="margin-top: 30px;">
+      <thead>
+        <tr>
+          <th scope="col">Plant Photo</th>
+          <th scope="col">Name</th>
+          <th scope="col">Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row" style="width: 250px;"><img src="assets/ficus-tree.jpg" alt="ficus tree" style="width: 250px; height: 250px;"></th>
+          <td>Ficus Tree</td>
+          <td>R350</td>
+          <td><button type="button" class="deleteRow">
+            Remove
+            </button></td>
+        </tr>
+        <tr>
+          <th scope="row"><img src="assets/japanese-maple.jpg" alt="japanese-maple" style="width: 250px; height: 250px;"></th>
+          <td>Japanese Maple</td>
+          <td>R1200</td>
+          <td><button type="button" class="deleteRow">
+            Remove
+            </button></td>
+        </tr>
+        <tr>
+          <th scope="row"><img src="assets/snake-tree.jpg" alt="snake-tree" style="width: 250px; height: 250px;"></th>
+          <td>Snake Plant</td>
+          <td>R400</td>
+          <td><button type="button" class="deleteRow">
+            Remove
+            </button></td>
+        </tr>
+      </tbody>
+    </table>
+
     <!-- Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
