filter and sort kind of working

--- a/browse.html
+++ b/browse.html
@@ -43,6 +43,13 @@
         <!-- Header -->
         <h2>Browse Plants</h2>
 
+        <div class="filter-container">
+          <button id="onSaleButton">On Sale</button>
+          <button id="alphabeticalButton">Alphabetically</button>
+      </div>
+      <div id="plantList">
+          <!-- Plant cards will be dynamically added here -->
+      </div>
         <!-- Plants List Cards -->
         <div class="row py-5 gy-3" id="plantsContainer">
 
